--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,16 @@
 [user]
 	name = Konfigurera namn i ~/.gitconfig
 	email = fornamn.efternamn@fgirot.se
-
 [alias]
-	# Ett exempel på användbart git alias, utöka dem gärna!
+	co = checkout
+	st  = status
+	cam = commit -a -m
+	br  = branch
+	co  = checkout
 	logg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	# Add all tracked files to previous commit, using the that commits message
+	amend = git commit --amend -C HEAD
+	# Add changes to be committed to previous commit, using a message you define
+	amendm = git commit --amend -m
+[rerere]
+	enabled = true
