--- a/.gitconfig
+++ b/.gitconfig
@@ -16,5 +16,19 @@
 	enabled = true
 [push]
 	default = simple
+# TODO: Trying to do this on windows
+# http://stackoverflow.com/questions/14821358/git-mergetool-with-meld-on-windows
 [merge]
-	tool = meld
+#	tool = meld
+[mergetool "meld"]
+	prompt = false
+	keepBackup = false
+	keepTemporaries = false
+	path = C:/Program Files (x86)/Meld/Meld.exe
+	cmd = '\"/c/Program Files (x86)/Meld/meld/meld.exe\" $PWD/$LOCAL $PWD/$BASE $PWD/$REMOTE --output=$PWD/$MERGED'
+
+[core]
+	editor = vi
+	# TODO: Need to write a wrapper script to use windows tools?
+	# http://stackoverflow.com/questions/1634161/how-do-i-use-notepad-or-other-with-msysgit
+	# C:/Program Files (x86)/Notepad++/notepad++.exe
