--- a/.gitconfig
+++ b/.gitconfig
@@ -19,16 +19,20 @@
 # TODO: Trying to do this on windows
 # http://stackoverflow.com/questions/14821358/git-mergetool-with-meld-on-windows
 [merge]
-#	tool = meld
+	tool = meld
 [mergetool "meld"]
 	prompt = false
 	keepBackup = false
 	keepTemporaries = false
 	path = C:/Program Files (x86)/Meld/Meld.exe
-	cmd = '\"/c/Program Files (x86)/Meld/meld/meld.exe\" $PWD/$LOCAL $PWD/$BASE $PWD/$REMOTE --output=$PWD/$MERGED'
+#	cmd = '\"/c/Program Files (x86)/Meld/meld/meld.exe\" $PWD/$LOCAL $PWD/$BASE $PWD/$REMOTE --output=$PWD/$MERGED'
 
 [core]
 	editor = vi
+	autocrlf = true
+	excludesfile = C:\\Users\\carl-johan.sveningss\\Documents\\gitignore_global.txt
 	# TODO: Need to write a wrapper script to use windows tools?
 	# http://stackoverflow.com/questions/1634161/how-do-i-use-notepad-or-other-with-msysgit
 	# C:/Program Files (x86)/Notepad++/notepad++.exe
+[pull]
+	rebase = true
