Push skickar som default upp grenen som angetts som default
Se http://stackoverflow.com/questions/13148066/warning-push-default-is-unset-its-implicit-value-is-changing-in-git-2-0

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
 [rerere]
 	enabled = true
 [push]
-	default = simple
+	default = upstream
 # TODO: Trying to do this on windows
 # http://stackoverflow.com/questions/14821358/git-mergetool-with-meld-on-windows
 [merge]
