style [tmux]: Make tmux copying easier to understand

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -1,7 +1,13 @@
 # From https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
-setw -g mode-keys
+# See also https://linuxhint.com/copy-paste-clipboard-tmux/
+# Use vi mode
+setw -g mode-keys vi
+# Bind 'v' (besides <space>) and 'y' (besides <enter>) to start and end copy
+# selection
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
+# Toggle to rectangular selection mode using 'r'
+
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
